# riscv-isa

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  riscv-isa.cabal  stack.yaml
src/: RiscV.hs
src/RiscV/: RV32I.hs
src/RiscV/Decode/: RV32I.hs
src/RiscV/Encode/: RV32I.hs  Util.hs
src/RiscV/Internal/: Util.hs
test/: Spec.hs
test/RiscV/: RV32ISpec.hs
