name:                riscv-isa
version:             0.1.0.0
synopsis:            Haskell representation of the RISC-V instruction set architecture
description:         Please see README.md
homepage:            https://github.com/cocreature/riscv-isa#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Kiefer
maintainer:          value
copyright:           (C) 2016 Moritz Kiefer
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cocreature/riscv-isa
